--- a/package.json
+++ b/package.json
@@ -9,11 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@tanstack/react-query": "^5.64.2",
+    "@tanstack/react-query-devtools": "^5.64.2",
+    "axios": "^1.7.9",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^11.18.1",
+    "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.473.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "next": "15.1.7",
+    "next-intl": "^3.26.3",
+    "pannellum-react": "^1.2.4",
+    "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
+    "react-leaflet": "^5.0.0",
+    "react-share": "^5.2.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwind-scrollbar": "^4.0.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.16",
+    "@types/js-cookie": "^3.0.6",
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
