--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.473.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.7",
+    "next": "15.2.4",
     "next-intl": "^3.26.3",
     "pannellum-react": "^1.2.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
@@ -32,16 +32,16 @@
     "tailwind-scrollbar": "^4.0.0"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.16",
+    "@eslint/eslintrc": "^3",
     "@types/js-cookie": "^3.0.6",
-    "typescript": "^5",
+    "@types/leaflet": "^1.9.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
