--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
     "react-share": "^5.2.0",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar": "^4.0.0"
   },
