--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.4",
+    "@react-pdf/renderer": "^4.3.0",
     "@tanstack/react-query": "^5.64.2",
     "@tanstack/react-query-devtools": "^5.64.2",
     "axios": "^1.7.9",
@@ -18,6 +19,7 @@
     "framer-motion": "^11.18.1",
     "html2pdf.js": "^0.10.3",
     "js-cookie": "^3.0.5",
+    "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.473.0",
     "next": "15.2.4",
@@ -29,6 +31,7 @@
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
     "react-share": "^5.2.0",
+    "react-to-print": "^3.1.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar": "^4.0.0"
