--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.4",
-    "@react-pdf/renderer": "^4.3.0",
     "@tanstack/react-query": "^5.64.2",
     "@tanstack/react-query-devtools": "^5.64.2",
+    "arabic-reshaper": "^1.1.0",
     "axios": "^1.7.9",
+    "bidi-js": "^1.0.3",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.18.1",
+    "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.473.0",
